[tool.poetry]
name = "hh-db"
version = "0.1.0"
description = ""
authors = ["IliaPr <ilya.prianichnikov@gmail.com>"]
readme = "README.md"
packages = [{include = "hh_db"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
